--- a/wp-content/themes/intership/sass/utils/_variables.scss
+++ b/wp-content/themes/intership/sass/utils/_variables.scss
@@ -1,13 +1,13 @@
-// breakpoints
-$small:                                       575px;
+//breakpoints
+$small:                                       520px;
 $medium:                                      768px;
-$large:                                       1024px;
+$large:                                       990px;
 $huge:                                        1200px;
 
-//container breakpoints
-$small-container:                             540px;
-$medium-container:                            750px;
-$large-container:                             992px;
+//container-variables
+$small-container:                             480px;
+$medium-container:                            730px;
+$large-container:                             890px;
 $huge-container:                              1170px;
 
 //colors
