--- a/wp-content/themes/intership/sass/components/_progressbar.scss
+++ b/wp-content/themes/intership/sass/components/_progressbar.scss
@@ -4,12 +4,11 @@
   overflow: hidden;
   background-color: #d3d3d3;
   width: 100%;
+  position: relative;
 }
 .progress-bar {
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  width:0px;
+  height:3px;
+  position:relative;
   background: $red;
 }
