--- a/wp-content/themes/intership/style.css
+++ b/wp-content/themes/intership/style.css
@@ -563,7 +563,7 @@ a:hover, a:active {
 	display: block;
 }
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 992px) {
 	.menu-toggle {
 		display: none;
 	}
